examples/kubernetes/service-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
  namespace: example-app

spec:
  selector:
    app: example-app

  ports:
    - name: http
      port: 80
      targetPort: 80

  type: ClusterIP
